kubernetes/core-services/services-admin-secret.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cluster-admin-authentication
  namespace: kube-system
spec:
  basicAuth:
    secret: "cluster-admin-credentials"
