kubernetes/core-services/openldap.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: ldap
      port: 389
  selector:
    app: openldap

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: default
  labels:
    app: openldap
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: ldap
          image: osixia/openldap
          args:
            - --copy-service
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "512Mi"
              cpu: "1.00"
          ports:
            - name: ldap
              containerPort: 389
          volumeMounts:
            - name: openldap-db
              mountPath: /var/lib/ldap
            - name: openldap-config
              mountPath: /etc/ldap/slapd.d
      volumes:
        - name: ldap
          configMap:
            name: ldap
        - name: openldap-config
          hostPath:
            path: /storage/openldap/config
        - name: openldap-db
          hostPath:
            path: /storage/openldap/db
