kubernetes/core-services/postgresql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: db
      port: 5432
  selector:
    app: postgresql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: default
  labels:
    app: postgresql
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: db
          image: postgres:15-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "2048Mi"
              cpu: "3.0"
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
            - name: scripts
              mountPath: /docker-entrypoint-initdb.d/create-multiple-postgresql-databases.sh
              subPath: create-multiple-postgresql-databases.sh
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: postgresql
        - name: scripts
          configMap:
            name: postgresql-scripts
            defaultMode: 0744
