kubernetes/core-services/ldap-user-manager.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-user-manager
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: ldap-user-manager

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ldap-user-manager
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ldap-user-manager.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: ldap-user-manager
          port: 80
  tls:
    secretName: wilcard-main-domain-tls

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap-user-manager
  namespace: default
  labels:
    app: ldap-user-manager
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap-user-manager
  template:
    metadata:
      labels:
        app: ldap-user-manager
    spec:
      containers:
        - name: app
          image: wheelybird/ldap-user-manager
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 80
