kubernetes/core-services/pihole.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: pihole

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: dns-tcp
      port: 53
  selector:
    app: pihole
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: default
spec:
  ports:
    - protocol: UDP
      name: dns-udp
      port: 53
  selector:
    app: pihole
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: default
spec:
  tls:
    - hosts:
        - pihole.${DOMAIN_NAME}
      secretName: wilcard-main-domain-tls
  rules:
    - host: pihole.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: default
  labels:
    app: pihole
  annotations:
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      affinity:
        nodeAffinity:
          # Only on DNS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: dns
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: pihole/pihole
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.25"
            limits:
              memory: "1024Mi"
              cpu: "1.00"
          ports:
            - name: web
              containerPort: 80
            - name: dns-tcp
              containerPort: 53
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: config
          hostPath:
            path: /storage/pihole/config
        - name: dnsmasq
          hostPath:
            path: /storage/pihole/dnsmasq.d
